Added another title to the branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ua">
 <head>
     <meta charset="utf-8">
-    <title>Devops Growth</title>
+    <title>Branch "Feature"</title>
     <link href="style.css" rel="stylesheet">
     <style>
         ol {
